[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Menus/OptionsMenu/Controls/input_mapper/InputMapper.tscn" type="PackedScene" id=1]
[ext_resource path="res://Global/Fonts/BoldCapsPixel64.tres" type="DynamicFont" id=2]
[ext_resource path="res://Global/GUI_theme/transparant_UI_theme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Menus/OptionsMenu/Controls/input_line/ActionList.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Menus/OptionsMenu/Controls/KeySelectMenu.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Menus/OptionsMenu/Controls/InputMenu.gd" type="Script" id=6]

[sub_resource type="GDScript" id=1]
script/source = "extends OptionButton

# This function will initialize all the inputs with default profile inputs -> AZERTY Configuration.
func initialize(input_mapper):
	for profile_index in input_mapper.profiles: #Get all the exisiting profile
		var profile_name = input_mapper.profiles[profile_index].capitalize() #Get the name of each profile and capitalize it
		add_item(profile_name, profile_index) #add_item function add the item as a Label Node, displaying the profile
	var _err = self.connect(\"item_selected\", input_mapper, \"_on_ProfilesMenu_item_selected\")
"

[node name="InputMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InputMapper" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Column" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 960.0
margin_bottom = 540.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer/Column"]
margin_right = 960.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Controls Menu"
align = 1
autowrap = true
uppercase = true

[node name="ProfilesMenu" type="OptionButton" parent="CanvasLayer/Column"]
margin_left = 349.0
margin_top = 76.0
margin_right = 610.0
margin_bottom = 133.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
text = "Select Profile"
flat = true
script = SubResource( 1 )

[node name="Header" type="HBoxContainer" parent="CanvasLayer/Column"]
margin_top = 158.0
margin_right = 960.0
margin_bottom = 209.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action" type="Label" parent="CanvasLayer/Column/Header"]
margin_right = 320.0
margin_bottom = 51.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_constants/shadow_offset_x = 0
text = "Action"
uppercase = true

[node name="Control" type="Label" parent="CanvasLayer/Column/Header"]
margin_left = 320.0
margin_right = 640.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_constants/shadow_offset_x = 0
text = "Control"
align = 1
uppercase = true

[node name="Button" type="Label" parent="CanvasLayer/Column/Header"]
margin_left = 792.0
margin_right = 960.0
margin_bottom = 51.0
size_flags_horizontal = 10
size_flags_vertical = 1
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_constants/shadow_offset_x = 0
text = "Change"
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Column"]
margin_top = 234.0
margin_right = 960.0
margin_bottom = 451.0
size_flags_vertical = 3
follow_focus = true

[node name="ActionList" type="VBoxContainer" parent="CanvasLayer/Column/ScrollContainer"]
margin_right = 960.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
script = ExtResource( 4 )

[node name="PlayButton" type="Button" parent="CanvasLayer/Column"]
margin_left = 416.0
margin_top = 476.0
margin_right = 544.0
margin_bottom = 540.0
rect_min_size = Vector2( 128, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Play"

[node name="KeySelectMenu" type="Panel" parent="CanvasLayer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.679569 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/KeySelectMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -479.0
margin_top = -30.0
margin_right = 479.0
margin_bottom = 30.0
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0.596078, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Press a Key..."
align = 1
autowrap = true
uppercase = true
[connection signal="pressed" from="CanvasLayer/Column/PlayButton" to="." method="_on_PlayButton_pressed"]
